--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header id="head">
         <div id="nav">
           <div id="name">
-           <h1><span>A</span>bd'lateef <span>A</span>bd'hame</h1>
+           <h1><span>A</span>bd'lateef <span>A</span>bd'hameed</h1>
           </div>
            <p>
                <ul>
