--- a/index.html
+++ b/index.html
@@ -180,11 +180,12 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="lat">
-        &copy; 2023 Al-Lateef. All rights reserved.
+        <div id="lat">
+        &copy; 2023 Al-Lateef. All rights reserved.</div>
     </div>
 
+    
+    
 
 
 
