--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div>
                         <h3>Have a question?</h3>
                         <h4>I am here to help you</h4>
-                        <span>Email Me At Hameedlateef343@Mail.Com</span>
+                        <span>Email Me At Hameedlateef343@Gmail.Com</span>
                     </div>
                 </div>
                 <div id="her">
