--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div id="lan">
             <h1>Abd'lateef Abd'hameed</h1>
             <p>Freelance Web Developer</p>
-            <h4>I'm a jumior front-end developer looking for a new role in an exciting company.I focus on writing accessible HTML,BOOTSTRAP,using modern CSS and writing clean Js.When writing Js code,I mostly use React,but I can adapt to whatever tools are required.I'm based in Lagos,Nigeria,but happy working remotely and have experience in remote teams.When I'm not coding,you'll find me outdoors.I love being out in nature whether that's going for a walk,cycling or football.I'd love you to check my works.</h4>
+            <h4>I'm a junior front-end developer looking for a new role in an exciting company.I focus on writing accessible HTML,BOOTSTRAP,using modern CSS and writing clean Js.When writing Js code,I mostly use React,but I can adapt to whatever tools are required.I'm based in Lagos,Nigeria,but happy working remotely and have experience in remote teams.When I'm not coding,you'll find me outdoors.I love being out in nature whether that's going for a walk,cycling or football.I'd love you to check my works.</h4>
             
             <button> <a href="#">Portfolio</a>
             </button>
